--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -94,25 +94,28 @@
     margin-left: 0;
   }
 
+  .product-card-outerdiv{
+    width: 100%;
+  }
+
   .shop-more-btn {
     display: none;
   }
 
-  .product-result-container {
-    flex-direction: column;
-    /* Change to vertical layout */
-    overflow-y: auto;
-    /* Enable vertical scroll */
-    /* height: 100vh; */
-    /* Ensure it takes full height */
-    align-items: center;
+  .product-card {
+    width: 100%;
+    height: 400px;
+  }
 
-    /* Hide the scrollbar */
+  .product-result-container {
+    margin-right: 5vw;
+    flex-direction: column;
+    overflow-y: scroll;
+    align-items: center;
+    height: 70vh;
     scrollbar-width: none;
-    /* For Firefox */
     -ms-overflow-style: none;
-    /* For Internet Explorer and Edge */
-    margin-left: 10px;
+
   }
 }
 
