--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -87,6 +87,10 @@
 }
 
 @media (max-width: 767px) {
+  .body-bg {
+    height: calc(100vh - 40px);
+  }
+
   .sidebar {
     z-index: 500;
     position: absolute;
