--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -86,11 +86,10 @@
   margin-bottom: 30px;
 }
 
-@media (max-width: 767px) {
-  /* .body-bg {
-    height: calc(100vh - 40px);
-  } */
+@media (max-width: 1000px) {
+}
 
+@media (max-width: 767px) {
   .sidebar {
     z-index: 500;
     position: absolute;
